--- a/frontend/browser-extension/manifest.json
+++ b/frontend/browser-extension/manifest.json
@@ -7,7 +7,8 @@
   "permissions": [
     "activeTab",
     "storage",
-    "notifications"
+    "notifications",
+    "scripting"
   ],
   
   "host_permissions": [
@@ -30,7 +31,7 @@
         "*://outlook.office.com/*",
         "*://mail.yahoo.com/*"
       ],
-      "js": ["content.js"],
+      "js": ["fixed-popup-system.js", "content.js"],
       "css": ["content.css"],
       "run_at": "document_end"
     }
